[Finishes #185084535] Fixed logo covering navigation on small window

--- a/public/site_dark.css
+++ b/public/site_dark.css
@@ -31,7 +31,7 @@ nav {
   padding-bottom: 60px;
   font-weight: bold;
   margin-right: 50px;
-  margin-left: 50px;
+  margin-left: 150px;
 }
 
 nav > ul {
